tests/negative/strict_mixed_list.urb
use strict,
bad = [1, 2.5],
